--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./style.css">
   
-  <title>Frontend Mentor | Results summary component</title>
+  <title>Results Summary Component</title>
 </head>
 <body>
   <div class="mainContainer">
